--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
+    <p>This is the first file in my new Git Repo.</p>
+    <p>New line in our file!.</p>
+
+
 </body>
 </html>
