--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Hello world!</h1>
+    <div>
+        <img src="Screenshot 2024-11-25 184041.png" alt="Hello World from Space" style="width: 100%;max-width: 960px;">
+    </div>
     <p>This is the first file in my new Git Repo.</p>
     <p>This is the first file in my new Git Repo.</p>
     <p>New line in our file!.</p>
