added new image

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <img src="Screenshot 2024-11-25 184041.png" alt="Hello World from Space" style="width: 100%;max-width: 960px;">
     </div>
     <p>This is the first file in my new Git Repo.</p>
-    <p>This is the first file in my new Git Repo.</p>
     <p>New line in our file!.</p>
+    <div>
+        <img src="Screenshot 2024-11-27 185652.png" alt="Hello Git" style="width: 100%;max-width: 640px;">
+    </div>
 
 
 </body>
